--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title></title>
     <link rel='stylesheet' href='/css/style.css' />
     <script src="/bower_components/angular/angular.min.js"></script>
     <script src="/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
@@ -9,6 +9,7 @@
   </head>
   <body ng-app='someApp'>
     <h1>Angular</h1>
+    <ui-view></ui-view>
 
     <ui-view></ui-view>
   </body>
