--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,16 +1,35 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title></title>
-    <link rel='stylesheet' href='/css/style.css' />
-    <script src="/bower_components/angular/angular.min.js"></script>
-    <script src="/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
-    <script src="/js/bundle.js"></script>
-  </head>
-  <body ng-app='someApp'>
-    <h1>Angular</h1>
-    <ui-view></ui-view>
-
-    <ui-view></ui-view>
-  </body>
+<head>
+  <title>Love Me</title>
+  <link rel='stylesheet' href='/bower_components/bootstrap/dist/css/bootstrap.css' />
+  <link rel='stylesheet' href='/css/style.css'/>
+  <link rel="stylesheet" type="text/css" href="/bower_components/sweetalert/dist/sweetalert.css">
+  <script src="/bower_components/jquery/dist/jquery.min.js"></script>
+  <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="/bower_components/sweetalert/dist/sweetalert.min.js"></script>
+  <script src="/bower_components/angular/angular.min.js"></script>
+  <script src="/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+  <script src="/js/bundle.js"></script>
+</head>
+<body ng-app='someApp'>
+  <nav class="navbar navbar-default navbar-static-top">
+  <div class="container" ng-controller='navCtrl'>
+    <div class="navbar-header">
+      <button type="button" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar" class="navbar-toggle collapsed"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="/" class="navbar-brand">Love Me</a>
+    </div>
+    <div id="navbar" class="navbar-collapse collapse">
+      <ul class="nav navbar-nav">
+        <li><a href="/">Home</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li id="regme"><a ui-sref="register">Register</a></li>
+        <li id="logme"><a ui-sref="login">Login</a></li>
+        <li id="outme"><a ui-sref="logout">Logout</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+  <ui-view></ui-view>
+</body>
 </html>
